Fix flashMessageContainer overlapping issue.

--- a/src/styles/components/web/_flashMessage.scss
+++ b/src/styles/components/web/_flashMessage.scss
@@ -1,17 +1,17 @@
-.flashMessageContainer {
+.flashMessageContainer,
+.toastContainer {
 	position: fixed;
-	height: 100%;
 	width: 300px;
 	right: $gutter*2;
 	top: 104px;
-	bottom: $baseline;
 }
 
-.flashMessage {
+.flashMessage,
+.toast {
 	@extend .card;
-	margin-bottom: $baseline/2;
-    box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.1);
-    z-index: 4;
 
-    cursor: default;
+	margin-bottom: $baseline/2;
+	box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+	z-index: 4;
+	cursor: default;
 }
